2005-04-04  Don Allingham  <don@gramps-project.org>
	* src/MedaiView.py: pass handle instead of GRAMPS ID during drag-n-drop

2005-04-01  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/GrampsDBCallback.py: Don't check callbacks if the dict is empty.
	
2005-04-04  Don Allingham  <don@gramps-project.org>
	* src/GrampsDbBase.py: add "request_rebuild" to encapsulate rebuild
	requests in the database instance
	* src/ReadXML.py: use request_rebuild instead of directly emitting s
	ignals
	* src/ReadGedCom.py: use request_rebuild instead of directly emitting 
	signals

2005-04-01  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/GrampsDBCallback.py: Added code to disable/enable signals on
	a per instance or all instance bassis. Improved test code and 
	changed type checking to use isinstance instead of type(). 
	
2005-04-04  Alex Roitman  <shura@gramps-project.org>
	* src/ImageSelect.py (on_savephoto_clicked): Pass transaction to
	savephoto; (savephoto): take transaction argument);
	(on_photolist_drag_data_received): Pass transaction.

2005-04-03  Don Allingham  <don@gramps-project.org>
	* src/FamilyView.py: commit family properly
	* src/PedView.py: change_active_person typo
	* src/PeopleView.py: don't change active person with updated
	* src/SelectChild.py: Fix callbacks
	* src/gramps_main.py: load active family on change
	* src/ArgHandler.py: Make sure all databases are closed before
	creating a new one.
	* src/DisplayModels.py: Calculate new nodes properly after a 
	node has be deleted. The node hasn't been removed from the database
	yet.
	* src/EditPerson.py: Add check for unknown gender before closing
	* src/EditSource.py: Remove unnecessary updates 
	* src/GrampsBSDDB.py: check for open in close()
	* src/GrampsDbBase.py: spelling error
	* src/MediaView.py: connect to database-changed
	* src/PedView.py: remove unused update function
	* src/PeopleView.py: connect to database-changed 
	* src/PlaceView.py: connect to database-changed 