@@ -142,8 +142,7 @@ class GrampsInMemDB(GrampsDbBase):
         if transaction != None:
             old_data = self.person_map.get(handle)
             transaction.add(PERSON_KEY,handle,old_data)
-        if transaction and not transaction.batch:
-            self.emit('person-delete',([handle],))
+        self.emit('person-delete',([handle],))
         del self.id_trans[person.get_gramps_id()]
         del self.person_map[handle]
 
@@ -154,8 +153,7 @@ class GrampsInMemDB(GrampsDbBase):
         if transaction != None:
             old_data = self.source_map.get(str(handle))
             transaction.add(SOURCE_KEY,handle,old_data)
-        if transaction and not transaction.batch:
-            self.emit('source-delete',([handle],))
+        self.emit('source-delete',([handle],))
         del self.sid_trans[source.get_gramps_id()]
         del self.source_map[str(handle)]
 
@@ -166,8 +164,7 @@ class GrampsInMemDB(GrampsDbBase):
         if transaction != None:
             old_data = self.place_map.get(str(handle))
             transaction.add(PLACE_KEY,handle,old_data)
-        if transaction and not transaction.batch:
-            self.emit('person-delete',([handle],))
+        self.emit('person-delete',([handle],))
         del self.pid_trans[place.get_gramps_id()]
         del self.place_map[str(handle)]
 
@@ -188,8 +185,7 @@ class GrampsInMemDB(GrampsDbBase):
         if transaction != None:
             old_data = self.family_map.get(str(handle))
             transaction.add(FAMILY_KEY,handle,old_data)
-        if transaction and not transaction.batch:
-            self.emit('family-delete',([str(handle),]))
+        self.emit('family-delete',([str(handle),]))
         del self.fid_trans[family.get_gramps_id()]
         del self.family_map[str(handle)]
 
